[gd_scene load_steps=9 format=2]

[ext_resource path="res://components/elements/styled/custom_dragable_window_popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/popups/popup_ui_settings.gd" type="Script" id=2]
[ext_resource path="res://components/elements/styled/icon_check_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/icons/icon_128_hide.svg" type="Texture" id=4]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/config/config_templates/component_config_line_edit_int.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/icon_128_substract_minus_remove.svg" type="Texture" id=8]

[node name="UISettings" instance=ExtResource( 1 )]
margin_right = 640.0
margin_bottom = 450.0
rect_min_size = Vector2( 640, 450 )
script = ExtResource( 2 )

[node name="Titlebar" parent="Content" index="0"]
margin_right = 640.0
margin_bottom = 28.0

[node name="Label" parent="Content/Titlebar" index="0"]
margin_right = 640.0
margin_bottom = 24.0
text = "Settings"

[node name="Content" parent="Content" index="1"]
margin_top = 32.0
margin_right = 640.0
margin_bottom = 400.0

[node name="SettingsTabs" type="TabContainer" parent="Content/Content" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 358.0
tab_align = 0

[node name="Resoto Core" type="MarginContainer" parent="Content/Content/SettingsTabs" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Content/Content/SettingsTabs/Resoto Core" index="0"]
margin_left = 20.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 300.0

[node name="ConnectionLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox" index="0"]
margin_right = 590.0
margin_bottom = 30.0
theme_type_variation = "Label_24"
text = "Connection"

[node name="ConnectionSettings" type="GridContainer" parent="Content/Content/SettingsTabs/Resoto Core/VBox" index="1"]
margin_top = 34.0
margin_right = 590.0
margin_bottom = 139.0
columns = 2

[node name="AdressLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings" index="0"]
margin_top = 6.0
margin_right = 140.0
margin_bottom = 26.0
rect_min_size = Vector2( 140, 0 )
text = "Adress"

[node name="AdressEdit" type="LineEdit" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings" index="1"]
unique_name_in_owner = true
margin_left = 144.0
margin_right = 590.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings" index="2"]
margin_top = 42.0
margin_right = 140.0
margin_bottom = 62.0
rect_min_size = Vector2( 140, 0 )
text = "Port"

[node name="PortEdit" type="LineEdit" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings" index="3"]
unique_name_in_owner = true
margin_left = 144.0
margin_top = 36.0
margin_right = 590.0
margin_bottom = 68.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="PSKLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings" index="4"]
margin_top = 78.0
margin_right = 140.0
margin_bottom = 98.0
rect_min_size = Vector2( 140, 0 )
text = "PSK"

[node name="PSKEditGroup" type="HBoxContainer" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings" index="5"]
margin_left = 144.0
margin_top = 72.0
margin_right = 590.0
margin_bottom = 105.0

[node name="PSKLineEdit" type="LineEdit" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings/PSKEditGroup" index="0"]
unique_name_in_owner = true
margin_right = 409.0
margin_bottom = 33.0
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ShowPSKIcon" parent="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings/PSKEditGroup" index="1" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 413.0
margin_right = 446.0
toggle_mode = true
icon_tex = ExtResource( 4 )

[node name="CleanupLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox" index="2"]
margin_top = 143.0
margin_right = 590.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 60 )
theme_type_variation = "Label_24"
text = "Cleanup"
valign = 2

[node name="CleanupSettings" type="GridContainer" parent="Content/Content/SettingsTabs/Resoto Core/VBox" index="3"]
margin_top = 207.0
margin_right = 590.0
margin_bottom = 231.0
rect_min_size = Vector2( 550, 0 )
columns = 3

[node name="CleanupLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings" index="0"]
margin_top = 2.0
margin_right = 140.0
margin_bottom = 22.0
rect_min_size = Vector2( 140, 0 )
text = "Cleanup"

[node name="CleanupButton" parent="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings" index="1" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_left = 144.0
margin_right = 168.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 6

[node name="CleanupHint" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings" index="2"]
margin_left = 172.0
margin_top = 4.0
margin_right = 331.0
margin_bottom = 20.0
theme_type_variation = "LabelSmall"
text = "Enable cleanup of resources"

[node name="CleanupDryRunLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings" index="3"]
unique_name_in_owner = true
visible = false
margin_top = 30.0
margin_right = 140.0
margin_bottom = 50.0
rect_min_size = Vector2( 140, 0 )
text = "Cleanup dry run"

[node name="CleanupDryRunLabelButton" parent="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings" index="4" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_left = 144.0
margin_top = 28.0
margin_right = 168.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 6

[node name="CleanupDryRunHint" type="Label" parent="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings" index="5"]
unique_name_in_owner = true
visible = false
margin_left = 172.0
margin_top = 32.0
margin_right = 484.0
margin_bottom = 48.0
theme_type_variation = "LabelSmall"
text = "Do not actually clean up resources. Just create log files."

[node name="Resoto UI" type="MarginContainer" parent="Content/Content/SettingsTabs" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Content/Content/SettingsTabs/Resoto UI" index="0"]
margin_left = 20.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 300.0

[node name="GeneralUILabel" type="Label" parent="Content/Content/SettingsTabs/Resoto UI/VBox" index="0"]
margin_right = 576.0
margin_bottom = 30.0
theme_type_variation = "Label_24"
text = "General"

[node name="GeneralUISettings" type="GridContainer" parent="Content/Content/SettingsTabs/Resoto UI/VBox" index="1"]
margin_top = 34.0
margin_right = 576.0
margin_bottom = 56.0
columns = 2

[node name="ScaleLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings" index="0"]
margin_top = 1.0
margin_right = 140.0
margin_bottom = 21.0
rect_min_size = Vector2( 140, 0 )
text = "UI Scale"

[node name="ScaleGroup" type="HBoxContainer" parent="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings" index="1"]
margin_left = 144.0
margin_right = 278.0
margin_bottom = 22.0

[node name="ButtonUIScaleMinus" parent="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings/ScaleGroup" index="0" instance=ExtResource( 5 )]
margin_bottom = 22.0
rect_min_size = Vector2( 33, 20 )
hint_tooltip = "Change UI Scale"
icon_tex = ExtResource( 8 )

[node name="ScaleLevelLabel" type="Label" parent="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings/ScaleGroup" index="1"]
unique_name_in_owner = true
margin_left = 37.0
margin_top = 1.0
margin_right = 97.0
margin_bottom = 21.0
rect_min_size = Vector2( 60, 0 )
text = "100 %"
align = 1

[node name="ButtonUIScalePlus" parent="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings/ScaleGroup" index="2" instance=ExtResource( 5 )]
margin_left = 101.0
margin_right = 134.0
margin_bottom = 22.0
rect_min_size = Vector2( 33, 20 )
hint_tooltip = "Change UI Scale"
icon_tex = ExtResource( 7 )

[node name="Footer" parent="Content" index="2"]
margin_top = 404.0
margin_right = 640.0
margin_bottom = 450.0

[node name="Footerbar" parent="Content/Footer" index="0"]
margin_right = 630.0
margin_bottom = 32.0

[node name="CancelButton" type="Button" parent="Content/Footer/Footerbar" index="0"]
margin_left = 467.0
margin_right = 540.333
margin_bottom = 32.0
text = "Cancel"

[node name="AddWidgetButton" parent="Content/Footer/Footerbar" index="1"]
margin_left = 544.0
margin_right = 620.0
margin_bottom = 32.0

[connection signal="about_to_show" from="." to="." method="_on_UISettings_about_to_show"]
[connection signal="tab_changed" from="Content/Content/SettingsTabs" to="." method="_on_SettingsTabs_tab_changed"]
[connection signal="toggled" from="Content/Content/SettingsTabs/Resoto Core/VBox/ConnectionSettings/PSKEditGroup/ShowPSKIcon" to="." method="_on_ShowPSKIcon_toggled"]
[connection signal="pressed" from="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings/CleanupButton" to="." method="_on_CleanupButton_pressed"]
[connection signal="pressed" from="Content/Content/SettingsTabs/Resoto Core/VBox/CleanupSettings/CleanupDryRunLabelButton" to="." method="_on_CleanupDryRunLabelButton_pressed"]
[connection signal="pressed" from="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings/ScaleGroup/ButtonUIScaleMinus" to="." method="_on_ButtonUIScaleMinus_pressed"]
[connection signal="pressed" from="Content/Content/SettingsTabs/Resoto UI/VBox/GeneralUISettings/ScaleGroup/ButtonUIScalePlus" to="." method="_on_ButtonUIScalePlus_pressed"]
[connection signal="pressed" from="Content/Footer/Footerbar/CancelButton" to="." method="_on_CancelButton_pressed"]
